Revert "fix: Disable scroll anchoring on body to prevent jump when Mermaid renders"
This reverts commit 964485d216597471d59f038584627ccd77a82c7a.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -111,7 +111,6 @@ body::after {
 html,
 body {
     overflow-x: hidden;
-    overflow-anchor: none;
 }
 
 body, div, p, li {
